fix footer collapse arrow

--- a/less/_footer.less
+++ b/less/_footer.less
@@ -21,7 +21,7 @@
 		position: relative;
 
 		.footer-listTitle-arrows {
-	        padding-left: 100px;
+	        padding-left: 50px;
     
     		color: @grayregular;
     		font-size: 11px;
